--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t javieragui/hummerbox:init ./HummerBox/HummerBox
+          docker build -t javieragui/hummerbox:init ./HummerBox
           docker push javieragui/hummerbox:init
